// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon prop 1`] = `
<DocumentFragment>
  .c0.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 16px;
  padding: 0 3px;
  color: #fff;
  font-weight: 500;
  font-size: 12px;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(16px - 1px * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 1px solid #fff;
  border-radius: 16px;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c0.mul-info.mul-info--dot {
  width: 8px;
  min-width: 0;
  height: 8px;
  background-color: #ee0a24;
  border-radius: 100%;
}

<div
    class="c0 mul-info"
  >
    40
  </div>
</DocumentFragment>
`;

exports[`Icon prop 2`] = `<DocumentFragment />`;

exports[`Icon prop 3`] = `
<DocumentFragment>
  .c0.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 16px;
  padding: 0 3px;
  color: #fff;
  font-weight: 500;
  font-size: 12px;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(16px - 1px * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 1px solid #fff;
  border-radius: 16px;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c0.mul-info.mul-info--dot {
  width: 8px;
  min-width: 0;
  height: 8px;
  background-color: #ee0a24;
  border-radius: 100%;
}

<div
    class="c0 mul-info mul-info--dot"
  />
</DocumentFragment>
`;
